added hover effects

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,6 +43,23 @@ main nav {
   @apply border-0;
 }
 
+/* Icon styles */
+.icon-edit {
+  color: grey;
+}
+
+.icon-trash {
+  color: grey;
+}
+
+.icon-edit:hover {
+  color: skyblue;
+}
+
+.icon-trash:hover {
+  color: #f7022a;
+}
+
 /* button styles */
 button {
   @apply 
